# ffmpeg_learning

./: CMakeLists.txt  main.h  main_codec.cpp  main_format.cpp  main_io.cpp  main_opencv.cpp  main_qt_audio.cpp  main_rtmp.cpp  main_sdl.cpp  media_format.c
resource/: test.flv
